fixed overflow screen

--- a/styles/style.css
+++ b/styles/style.css
@@ -38,6 +38,7 @@
   justify-content: center;
   flex-direction: column;
   width: 100%;
+  min-height: 100vh;
 }
 
 .start-up-menu {
